gitops/environments/dev/apps/dndn-dev-report/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dndn-dev-report
  labels:
    app.kubernetes.io/part-of: dndn
